# monix

./: AGENTS.md  README.md  flake.nix  keys.nix  secrets.nix  state-audit.md
docs/: agent-fleet.md  fleet-flow.md  manual.md  security-audit-handoff-2026-07-10.md
hosts/fw0/: actual-cloudflare-tunnel-token.age  agent-openrouter-key.age  fw0.mod.nix  hardware.nix  services.nix
hosts/fw3/: fw3.mod.nix
hosts/vs0/: vs0.mod.nix
lib/: default.nix  fleet-guide.nix  fleet-loop-package.nix  fleet-topology.nix  network-fences.nix  systems.nix
modules/: audio.mod.nix  bluetooth.mod.nix  btop.mod.nix  claude.mod.nix  cockpit.mod.nix  dank.mod.nix  disko.mod.nix  fonts.mod.nix  ghostty.mod.nix  git.mod.nix  home.mod.nix  packages.mod.nix  tailscale.mod.nix
modules/core/: boot.mod.nix  locale.mod.nix  nix.mod.nix  secrets.mod.nix  users.mod.nix
modules/desktop/: bluetooth.mod.nix  cursor.mod.nix  dank.mod.nix  fonts.mod.nix  hyprland.mod.nix  kde.mod.nix  wallpapers.mod.nix
modules/gaming/: steam.mod.nix
modules/hyprland/: hyprland.mod.nix
modules/networking/: networking.mod.nix  ssh.mod.nix  syncthing.mod.nix
modules/server/: agent-dispatch.mod.nix  agent-vm.mod.nix  alerts.mod.nix  budgetbot.mod.nix  cockpit.mod.nix  fleet-log-stream.mod.nix  fleet-loop.mod.nix  fleet-tool.mod.nix  matrix.mod.nix  microvm-host.mod.nix  minecraft.mod.nix  newsbot.mod.nix  remy.mod.nix  ship-costs.mod.nix
modules/server/fleet-loop/: Cargo.toml
modules/server/fleet-loop/src/: main.rs
options/: flake-outputs.mod.nix  host.mod.nix
wallpapers/: README.md
(+26 files in other folders)
