[package]
name = "fleet-loop-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fs2 = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
